<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/half_padding">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addition_dish_alert_name_edit_text"
            style="@style/StyleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/half_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ingredient"
                android:outlineProvider="background"
                android:paddingStart="@dimen/normal_padding"
                android:paddingEnd="@dimen/normal_padding"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addition_dish_add_ingredient_button"
            style="@style/StyleButton"
            android:layout_width="0dp"
            android:layout_marginBottom="@dimen/half_margin"
            android:layout_marginEnd="@dimen/quarter_margin"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:onClick="onClickAlertAddButton"
            android:text="@string/add_ingredient"
            app:layout_constraintEnd_toStartOf="@+id/addition_dish_add_dish_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addition_dish_alert_name_edit_text" />

        <Button
            android:id="@+id/addition_dish_add_dish_button"
            style="@style/StyleButton"
            android:layout_width="0dp"
            android:layout_marginBottom="@dimen/half_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginStart="@dimen/quarter_margin"
            android:layout_marginTop="@dimen/half_margin"
            android:onClick="onClickAlertCancelButton"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addition_dish_add_ingredient_button"
            app:layout_constraintTop_toBottomOf="@+id/addition_dish_alert_name_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>